--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title>BRMP Penerapan | AI Assistant</title>
     <link rel="icon" href="{{ url_for('static', filename='image/profil.png') }}" type="image/png">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -93,8 +93,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4 mb-md-0">
-                    <h5 class="fw-bold mb-3" style="color: #e0940c;">BRMP Penerapan AI Assistant</h5>
-                    <p class="text-muted">Menyediakan layanan konsultasi dan informasi terkini seputar penerapan teknologi dan inovasi di Indonesia.</p>
+                    <h5 class="fw-bold mb-3" style="color: #e0940c;">BRMP Penerapan | AI Assistant</h5>
+                    <p class="text-muted">Layanan terintegrasi yang siap bantu jawab<br>pertanyaanmu 24/7 seputar BRMP Penerapan<br>Kementerian Pertanian Republik Indonesia.</p>
                     <div class="social-links">
                         <a href="https://www.facebook.com/brmppenerapan/" class="text-decoration-none me-2" style="color: #e0940c;">
                             <i class="fab fa-facebook-f"></i>
