--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,10 @@
                         <small class="online-text">Online</small>
                         </div>
 
-                        <button id="reset-chat" class="btn btn-sm" 
-                        style="color: #ffffffff; font-weight: 500;">
-                            <i class="fas fa-refresh" style="margin-right: 3px;"></i> Reset Obrolan
+                        <button id="reset-chat" class="btn btn-sm reset-chat-btn" 
+                                style="color: #ffffffff; font-weight: 500;">
+                            <i class="fas fa-trash" style="margin-right: 3px;"></i> 
+                            <span class="reset-text">Reset Obrolan</span>
                         </button>
                     </div>
                     
